--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
     <script src="dist/index.js" type="module"></script>
   </head>
   <body>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <canvas id="game-canvas" width="480" height="320"></canvas>
   </body>
 </html>
